// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.net.http.server;

import "data/app/app_info.proto";

option go_package = "personal-website-v2/go-data/net/http/server;server";

// Proto file describing the Request.

// The request info.
message RequestInfo {
    // The unique ID to identify the request.
    string id = 1;

    // The app info.
    personalwebsite.app.AppInfo app = 2;

    // The app session ID.
    uint64 app_session_id = 3;

    // The HTTP server ID.
    uint32 http_server_id = 4;

    // The status of the request can be New(1), InProgress(2), Success(3), or Failure(4).
    RequestStatusEnum.RequestStatus status = 5;

    // The date and time (in microseconds) at which the request was started.
    int64 start_time = 6;

    // Optional. The date and time (in microseconds) at which the request was ended.
    optional int64 end_time = 7;

    // Optional. The elapsed time, in microseconds.
    optional int64 elapsed_time_us = 8;

    string url = 9;
    string method = 10;
    string protocol = 11;
    string host = 12;

    // "IP:port"
    string remote_addr = 13;
    string request_uri = 14;
    int64 content_length = 15;

    // The JSON-encoded headers.
    string headers = 16;

    // headers
    string x_real_ip = 17;
    string x_forwarded_for = 18;
    string content_type = 19;
    string origin = 20;
    string referer = 21;
    string user_agent = 22;
}

// Container for enum describing the request status.
message RequestStatusEnum {
    // The request status.
    enum RequestStatus {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        NEW = 1;
        IN_PROGRESS = 2;
        SUCCESS = 3;
        FAILURE = 4;
    }
}
